--- a/app/src/css/main.css
+++ b/app/src/css/main.css
@@ -2012,6 +2012,10 @@ video {
     height: 2.5rem;
   }
 
+  .sm\:w-2\/3 {
+    width: 66.666667%;
+  }
+
   .sm\:w-auto {
     width: auto;
   }
@@ -2116,8 +2120,8 @@ video {
     height: auto;
   }
 
-  .md\:w-2\/3 {
-    width: 66.666667%;
+  .md\:w-3\/5 {
+    width: 60%;
   }
 
   .md\:w-4\/5 {
