--- a/app/src/html/components/faq/faq.html
+++ b/app/src/html/components/faq/faq.html
@@ -1,4 +1,4 @@
-<section class="border-b border-black divide-y" id="faq">
+<section class="border-b border-black divide-y" id="Claim">
   <div class="container relative px-5 mx-auto border-black lg:border-r lg:border-l lg:px-16 bg-macosLight-300">
     <div class="w-full lg:mx-auto lg:w-2/3">
       <div class="max-w-xl px-4 mx-auto sm:px-6 lg:py-16 lg:max-w-none lg:mx-0 lg:px-0">
