--- a/app/src/html/components/general/navigation.html
+++ b/app/src/html/components/general/navigation.html
@@ -15,16 +15,16 @@
       <div class="ml-auto divide-black lg:divide-x">
         <a href="#features" class="px-1 py-6 text-sm leading-snug lg:px-6 md:px-3 hover:text-orange-600 lg:hover:bg-macosLight-300"> Features </a>
 
-        <a href="#how" class="px-1 py-6 text-sm leading-snug lg:px-6 md:px-3 hover:text-orange-600 lg:hover:bg-macosLight-300"> How </a>
+        <a href="/#how" class="px-1 py-6 text-sm leading-snug lg:px-6 md:px-3 hover:text-orange-600 lg:hover:bg-macosLight-300"> How </a>
         <a
           href="#pricing"
           class="px-1 py-6 text-sm leading-snug border-black lg:border-l lg:px-6 md:px-3 hover:text-orange-600 lg:hover:bg-macosLight-300 focus:bg-macosLight-100"
           >Pricing
         </a>
         <a
-          href="#faq"
+          href="/claim"
           class="px-1 py-6 text-sm leading-snug border-black lg:border-l lg:px-6 md:px-3 hover:text-orange-600 lg:hover:bg-macosLight-300 focus:bg-macosLight-100"
-          >FAQ
+          >Claim
         </a>
       </div>
     </nav>
