--- a/app/src/html/components/saasSections/hero.html
+++ b/app/src/html/components/saasSections/hero.html
@@ -1,4 +1,4 @@
-<section class="border-b border-black lg:divide-y">
+<section class="border-black lg:divide-y">
   <div class="container relative px-5 py-16 mx-auto border-black bg-macosLight-300 lg:border-r lg:border-l lg:px-16">
     <div class="w-full lg:mx-auto xl:w-2/3">
       <div class="max-w-xl px-4 mx-auto sm:px-6 lg:py-16 lg:max-w-none lg:mx-0 lg:px-0">
